--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
+/*a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
@@ -21,15 +21,13 @@ a {
 a:hover {
   color: #535bf2;
 }
-
+*/
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  background-color: #F5FBF1;;
 }
-
+/*
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -66,3 +64,4 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+*/
