Rutas privadas terminadas y barra lateral (sin funcionalidad, solo cerar sesión) de la vista del mesero.

--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,13 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100vw;
+  height: 100vh;
 }
 
 /*a {
@@ -25,7 +26,9 @@ a:hover {
 body {
   margin: 0;
   padding: 0;
-  background-color: #F5FBF1;;
+  background-color: #f5fbf1;
+  width: 100vw;
+  height: 100vh;
 }
 /*
 h1 {
