--- a/src/components/Login.module.css
+++ b/src/components/Login.module.css
@@ -66,10 +66,8 @@
 }
 
 .right_side {
-  width: 58vw;
-  /* height: 100vh; */
+  width: 60vw;
   display: flex;
-  /* align-content: center; */
   justify-content: center;
   align-items: center;
 }
@@ -110,10 +108,9 @@ p {
   font-size: large;
 }
 
-/* Estilo para inputs autocompletados */
 .inputs_form:-webkit-autofill {
-  box-shadow: 0 0 0 30px white inset; /* Cambia el color de fondo */
-  -webkit-text-fill-color: #000; /* Cambia el color del texto */
+  box-shadow: 0 0 0 30px white inset; 
+  -webkit-text-fill-color: #000; 
 }
 
 .form_button {
