--- a/src/components/SideMenu.module.css
+++ b/src/components/SideMenu.module.css
@@ -18,6 +18,8 @@
   flex-wrap: wrap;
   justify-content: center;
   min-width: 95px;
+  position: fixed;
+  max-width: 126px;
 }
 
 .logoSide {
@@ -64,6 +66,7 @@
   column-gap: 15px;
   background: #161e11;
   min-width: 64px;
+  max-width: 82px;
 }
 
 .sideSection:hover {
